Alignment fix (match height js)

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -7,7 +7,11 @@
 html {
 /*  overflow-y: scroll;*/
 /*  overflow-x: hidden;*/
-
+  width: 100%;
+  height: 100%;
+  margin: 0px;
+  padding: 0px;
+  overflow-x: hidden; 
   font-size: unset;
 }
 
